--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Build
 on:
-  pull_request:
-    branches:
-    - master
+  push:
+    branches: [ master ]
 jobs:
-  test:
+  build:
     name: Building iOS app
     runs-on: macOS-latest
     steps:
