--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: xcodebuild clean build -workspace Ghosting\ Connector.xcworkspace -scheme Ghosting\ Connector CODE_SIGN_IDENTITY="iPhone Developer" CODE_SIGNING_REQUIRED=NO
+      run: xcodebuild clean build -workspace Ghosting\ Connector.xcworkspace -scheme Ghosting\ Connector CODE_SIGN_IDENTITY="iPhone Developer" -allowProvisioningUpdates CODE_SIGNING_REQUIRED=NO
