--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,57 @@
-# This is a basic workflow to help you get started with Actions
+name: Master Deploy
 
-name: Xcode Build
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy-action-code:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: sersoft-gmbh/xcodebuild-action@v1
-    - with:
-        workspace: Ghosting Connector.xcworkspace
-        scheme: Ghosting Connector
-        destination: platform=macOS
-        action: build
-        build-settings:  PLATFORM_NAME=iphonesimulator
+      - name: Install depenedencies
+        run: sudo npm i -g @zeit/ncc typescript
+      - uses: actions/checkout@v2
+      - name: Generate action code
+        run: npm run deploy
+      - name: Configure repository
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      - name: Commit changes
+        run: |
+          if ! git diff --exit-code; then
+            git add .
+            git commit -m "[AUTO] Update generated code"
+            git push
+          fi
+  
+  test-workspace:
+    needs: deploy-action-code
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        destination:
+          - platform=macOS
+          - platform=iOS Simulator,OS=latest,name=iPhone 11
+        action: [ build ]
+        use-xcpretty: [ true, false ]
+        include:
+          - destination: platform=iOS Simulator,OS=latest,name=iPhone 11
+            skip-testing: ''
+            action: build
+            use-xcpretty: true
+        
+    steps:
+      - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
+      - uses: actions/checkout@v2
+      - uses: sersoft-gmbh/xcodebuild-action@master
+        with:
+          workspace:  Ghosting COnnector.xcworkspace
+          scheme: Ghosting Connector
+          destination: ${{matrix.destination}}
+          skip-testing: ${{matrix.skip-testing}}
+          action: ${{matrix.action}}
+          use-xcpretty: ${{matrix.use-xcpretty}}
+      
 
-    
+  
