--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
       matrix:
         destination:
           - platform=macOS
-          - platform=iOS Simulator,id=2C775986-7D92-42B7-A9CE-448305889A36,OS=13.4
+          - platform=iOS Simulator,OS=13.4,name=iPhone 11
         action: [ build ]
         use-xcpretty: [ true, false ]
         include:
-          - destination: platform=iOS Simulator,id:2C775986-7D92-42B7-A9CE-448305889A36,OS=13.4
+          - destination: platform=iOS Simulator,OS=13.4,name=iPhone 11
             skip-testing: ''
             action: build
             use-xcpretty: true
