--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,25 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  test-workspace:
     runs-on: macos-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        destination:
+          - platform=macOS
+          - platform=iOS Simulator,OS=latest,name=iPhone 11
+        action: [ build ]
+        use-xcpretty: [ true, false ]
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
+      - uses: actions/checkout@v2
+      - uses: sersoft-gmbh/xcodebuild-action@master
+        with:
+          workspace: __test__/TestProject/TestProject.xcworkspace
+          scheme: TestProject
+          destination: ${{matrix.destination}}
+          skip-testing: ${{matrix.skip-testing}}
+          action: ${{matrix.action}}
+          use-xcpretty: ${{matrix.use-xcpretty}}
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: xcodebuild build -workspace Ghosting\ Connector.xcworkspace -scheme Ghosting\ Connector CODE_SIGNING_REQUIRED=NO
-
-    # Runs a set of commands using the runners shell
   
