--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,6 @@ jobs:
     strategy:
       matrix:
         destination:
-          - platform=macOS
           - platform=iOS Simulator,OS=latest,name=iPhone 11
         action: [ build ]
         use-xcpretty: [ true, false ]
@@ -27,8 +26,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: sersoft-gmbh/xcodebuild-action@master
         with:
-          workspace: __test__/TestProject/TestProject.xcworkspace
-          scheme: TestProject
+          workspace: Ghosting\ Connector.xcworkspace
+          scheme: Ghosting\ Connector
           destination: ${{matrix.destination}}
           skip-testing: ${{matrix.skip-testing}}
           action: ${{matrix.action}}
