--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: sersoft-gmbh/xcodebuild-action@master
         with:
-          workspace: Ghosting\ Connector.xcworkspace
+          workspace: Ghosting Connector.xcworkspace
           scheme: Ghosting\ Connector
           destination: ${{matrix.destination}}
           skip-testing: ${{matrix.skip-testing}}
