--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         action: [ build ]
         use-xcpretty: [ true, false ]
     steps:
-      - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer 
+      - run: xcrun simctl list && sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer 
       - uses: actions/checkout@v2
       - uses: sersoft-gmbh/xcodebuild-action@master
         with:
