--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,4 @@ jobs:
       - run: xcrun simctl list
       - run: sudo gem install cocoapods
       - run: pod install # Install CocoaPods dependencies
-      - run: fastlane scan # Run tests using Fastlane
-
-      # Collect XML test results data to show in the UI, and save the same XML
-      # files under test-results folder in the Artifacts tab
-      - store_test_results:
-          path: test_output
-      - store_artifacts:
-          path: test_output
-          destination: scan-output
+      - run: fastlane gym # Run tests using Fastlane
