--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,14 +22,14 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
   
-    - name: install cocoapods
+    - name: Install CocoaPods
       run: |
            sudo gem install cocoapods
         
-    - name: install fastlane
+    - name: Install FastLane
       run: |
            sudo gem install fastlane
            
-    - name: build
+    - name: Build Project
       run: |
            fastlane gym
