fine tune haptic feedback and settings

--- a/Ghosting Connector.xcodeproj/xcshareddata/xcschemes/Ghosting Connector.xcscheme
+++ b/Ghosting Connector.xcodeproj/xcshareddata/xcschemes/Ghosting Connector.xcscheme
@@ -51,12 +51,13 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2741C6AA2454BDC400EB4944"
@@ -64,7 +65,7 @@
             BlueprintName = "Ghosting Connector"
             ReferencedContainer = "container:Ghosting Connector.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
